// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-loading #render should render component as expected (1) 1`] = `
<gux-radial-loading screenreader-text="Loading">
  <div aria-label="Loading" class="gux-modal gux-spinner-container" role="progressbar">
    <div class="gux-spin-circle" role="presentation"></div>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (2) 1`] = `
<gux-radial-loading context="modal" screenreader-text="Loading">
  <div aria-label="Loading" class="gux-modal gux-spinner-container" role="progressbar">
    <div class="gux-spin-circle" role="presentation"></div>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (3) 1`] = `
<gux-radial-loading context="full-page" screenreader-text="Loading">
  <div aria-label="Loading" class="gux-full-page gux-spinner-container" role="progressbar">
    <div class="gux-spin-circle" role="presentation"></div>
  </div>
</gux-radial-loading>
`;

exports[`gux-radial-loading #render should render component as expected (4) 1`] = `
<gux-radial-loading context="input" screenreader-text="Loading">
  <div aria-label="Loading" class="gux-input gux-spinner-container" role="progressbar">
    <div class="gux-spin-circle" role="presentation"></div>
  </div>
</gux-radial-loading>
`;
